--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^14.1.0",
+    "pinia": "^3.0.4",
     "vue": "^3.5.24"
   },
   "devDependencies": {
