--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -27,4 +24,5 @@ jobs:
       uses: actions/upload-pages-artifact@v4.0.0
       with:
         path: dist/
-          
+    - name: Deploy
+      uses: actions/deploy-pages@v4.0.5
